syntax = "proto3";

option csharp_namespace = "network.main";

// import "common.proto";
import "types.proto";
import "unary.proto";
import "stream.proto";

package network.main;


service Main {
  rpc StreamOpen (stream StreamMsg) returns (stream StreamMsg);
  rpc UnaryDataSend (UnaryData) returns (UnaryData);
}

message StreamMsg {
  network.types.StreamPacket packet = 1;
  oneof data{
      network.stream.Stream_ConnectReq connect_req = 10;
      network.stream.Stream_ConnectRes connect_res = 11;

      network.stream.Stream_Disconnected disconnected = 20;

      network.stream.Stream_UserConnect user_connect = 30;
      network.stream.Stream_UserDisconnect user_disconnect = 31;

      network.stream.Stream_MessageSend message_send = 100;
      network.stream.Stream_MessageRecv message_recv = 101;
  }
}

message UnaryData {
  network.types.UnaryDataType type = 1;
  oneof data {
      network.unary.Unary_JoinReq join_req = 10;
      network.unary.Unary_JoinRes join_res = 11;

      network.unary.Unary_LoginReq login_req = 20;
      network.unary.Unary_LoginRes login_res = 21;

      network.unary.Unary_CommandReq command_req = 100;
      network.unary.Unary_CommandRes command_res = 101;
  }
}