syntax = "proto3";

option csharp_namespace = "network.types";

package network.types;

enum StreamPacket {
    StreamPacket_None = 0;
    StreamPacket_ConnectRes = 10;

    StreamPacket_Disconnected = 15;

    StreamPacket_UserConnect = 20;

    StreamPacket_MessageSend = 30;
    StreamPacket_MessageRecv = 31;
}

enum UnaryDataType {
    UnaryDataType_None = 0;

    UnaryDataType_JoinReq = 10;
    UnaryDataType_JoinRes = 11;
}

enum StatusCode {
    StatusCode_Success = 0;

    StatusCode_NotExist = 100;
    StatusCode_Duplicated = 200;

    StatusCode_Invalid = 20000;
}